# box

./: CMakeLists.txt  README.md  main.cpp
include/: apply.hpp  box.hpp  boxm.hpp  constr.hpp  def.hpp  impl.hpp  mkagg.hpp  mkbox.hpp  singular.hpp  trace.hpp  util.hpp  wrekurs.hpp  writer.hpp
include/detect/: detect_allocator.hpp
test/: CMakeLists.txt  app_rekurs_test.cpp  box0_test.cpp  box_test.cpp  boxalgebra_test.cpp  boxappend_test.cpp  boxbuild_test.cpp  boxcmp_test.cpp  boxh_test.cpp  boxhiter_test.cpp  boxiterstep_test.cpp  boxm_test.cpp  boxmk_test.cpp  boxselect_test.cpp  boxtransform_test.cpp  boxv_test.cpp  bxfunction_test.cpp  bxiterapp_test.cpp  bxiterator_test.cpp  bxtransfer_test.cpp  detect_allocator_type_test.cpp  detect_writingtype_test.cpp  single_test.cpp
